k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: eks-project
spec:
  replicas: 2
  selector:
   matchLabels:
      app: backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: backend
   

      containers:
        - name: backend
          image: chimuanyavic7/backend-dev:v1
          ports:
            - containerPort: 3500

          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "200Mi"
              cpu: "500m" 

          livenessProbe:
           httpGet:
             path: /healthz
             port: 3500
           initialDelaySeconds: 15
           periodSeconds: 20
          readinessProbe:
           httpGet:
             path: /ready
             port: 3500
           initialDelaySeconds: 10
           periodSeconds: 15
