k8s/statefullset.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: mongoset
  namespace: eks-project
spec:
  serviceName: mongo
  replicas: 2
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
          command:
            - mongod
            - "--replSet"
            - rs0
            - "--bind_ip_all"
          volumeMounts:
              - name: mongo-data
                mountPath: /data/db

          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"


  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: aws-ebs
        resources:
          requests:
            storage: 1Gi
