k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: eks-project
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 3500
      targetPort: 3500
      protocol: TCP
