k8s/headless.yaml
kind: Service
apiVersion: v1
metadata:
  name: mongo
  namespace: eks-project
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
