k8s/ingress1.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: app-ingress
  namespace: project3
spec:
  ingressClassName: nginx
  rules:
    - host: myapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3500
